fix z-index bug on modal

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -11,7 +11,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1000;
+    z-index: 100;
   }
 
   &__content {
@@ -22,7 +22,7 @@
     width: 100%;
     max-width: 750px;
     overflow: hidden;
-    z-index: 0;
+    z-index: 101;
   }
 
   &__buttons {
