--- a/src/components/Speakers/Speakers.scss
+++ b/src/components/Speakers/Speakers.scss
@@ -27,7 +27,7 @@
   &__signup-button {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 32px;
     margin-bottom: 102px;
   }
 
